fix: autocomplete content in chat view (#15240)
Fixes autocomplete content not showing up in inline editors like the
ChatInput.

With the Lumino migration we disabled 'fixedOverflowWidgets' in our
Monaco editors, as Lumino widget styles leverages 'contain',
influencing the position of autocomplete content.

This is now reverted, and instead the 'contain' of Lumino widgets is
forcefully disabled, fixing the autocomplete issue.

fixes #15237

--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -221,6 +221,8 @@ blockquote {
 
 .lm-Widget {
     font-size: var(--theia-ui-font-size1);
+    /** We override the contain of lm-Widget to make sure Monaco autocomplete etc. is correctly applied */
+    contain: none !important;
 }
 
 .lm-Widget.lm-mod-hidden {
